--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -20,10 +20,17 @@ jobs:
   # ═══════════════════════════════════════════════
   build-and-test:
     uses: ./.github/workflows/build-unit-tests.yml
-    
+
   # ═══════════════════════════════════════════════
   # ÉTAPE 2 : ANALYSE DE SÉCURITÉ STATIQUE (SAST)
   # ═══════════════════════════════════════════════
   code-quality-sast:
     needs: build-and-test  # ⚠️ Attend que le build soit terminé
     uses: ./.github/workflows/code-quality-sast.yml
+  
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 3 : DÉTECTION DE SECRETS
+  # ═══════════════════════════════════════════════
+  secret-scanning:
+    needs: build-and-test  # ⚠️ S'exécute en PARALLÈLE avec code-quality-sast
+    uses: ./.github/workflows/secret-scanning.yml
