--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -38,10 +38,10 @@ jobs:
   # ═══════════════════════════════════════════════
   # ÉTAPE 4 : ANALYSE DES DÉPENDANCES (SCA)
   # ═══════════════════════════════════════════════
-  sca-dependency-scan:
-    needs: build-and-test  # Également en parallèle
-    uses: ./.github/workflows/sca-dependency-scan.yml
-    secrets: inherit  # ⚠️ IMPORTANT pour passer NVD_API_KEY 
+  #sca-dependency-scan:
+    #needs: build-and-test  # Également en parallèle
+    #uses: ./.github/workflows/sca-dependency-scan.yml
+    #secrets: inherit  # ⚠️ IMPORTANT pour passer NVD_API_KEY 
   
   # ═══════════════════════════════════════════════
   # ÉTAPE 5 : SÉCURITÉ INFRASTRUCTURE AS CODE
@@ -49,3 +49,11 @@ jobs:
   secure-iac-dockerfile-scan:
     needs: build-and-test  # Toujours en parallèle
     uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
+
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 6 : BUILD & SCAN DOCKER
+  # ═══════════════════════════════════════════════
+  build-and-scan-docker:
+    needs: [code-quality-sast, secret-scanning, secure-iac-dockerfile-scan]
+    uses: ./.github/workflows/build-docker-image.yml
+    secrets: inherit
