--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -53,7 +53,15 @@ jobs:
   # ═══════════════════════════════════════════════
   # ÉTAPE 6 : BUILD & SCAN DOCKER
   # ═══════════════════════════════════════════════
-  build-and-scan-docker:
-    needs: [code-quality-sast, secret-scanning, secure-iac-dockerfile-scan]
-    uses: ./.github/workflows/build-docker-image.yml
+  #build-and-scan-docker:
+  #  needs: [code-quality-sast, secret-scanning, secure-iac-dockerfile-scan]
+  #  uses: ./.github/workflows/build-docker-image.yml
+  #  secrets: inherit
+
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 8 : PUBLICATION DOCKER HUB
+  # ═══════════════════════════════════════════════
+  publish-docker-hub:
+    needs: [build-and-scan-docker]
+    uses: ./.github/workflows/publish-docker-hub.yml
     secrets: inherit
