--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -53,10 +53,10 @@ jobs:
   # ═══════════════════════════════════════════════
   # ÉTAPE 6 : BUILD & SCAN DOCKER
   # ═══════════════════════════════════════════════
-  #build-and-scan-docker:
-  #  needs: [code-quality-sast, secret-scanning, secure-iac-dockerfile-scan]
-  #  uses: ./.github/workflows/build-docker-image.yml
-  #  secrets: inherit
+  build-and-scan-docker:
+    needs: [code-quality-sast, secret-scanning, secure-iac-dockerfile-scan]
+    uses: ./.github/workflows/build-docker-image.yml
+    secrets: inherit
 
   # ═══════════════════════════════════════════════
   # ÉTAPE 8 : PUBLICATION DOCKER HUB
@@ -65,4 +65,3 @@ jobs:
     needs: [build-and-scan-docker]
     uses: ./.github/workflows/publish-docker-hub.yml
     secrets: inherit
-    
