--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -46,15 +46,15 @@ jobs:
   # ═══════════════════════════════════════════════
   # ÉTAPE 5 : SÉCURITÉ INFRASTRUCTURE AS CODE
   # ═══════════════════════════════════════════════
-  secure-iac-dockerfile-scan:
-    needs: build-and-test  # Toujours en parallèle
-    uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
+  #secure-iac-dockerfile-scan:
+  #  needs: build-and-test  # Toujours en parallèle
+  #  uses: ./.github/workflows/secure-iac-dockerfile-scan.yml
 
   # ═══════════════════════════════════════════════
   # ÉTAPE 6 : BUILD & SCAN DOCKER
   # ═══════════════════════════════════════════════
   build-and-scan-docker:
-    needs: [code-quality-sast, secret-scanning, secure-iac-dockerfile-scan]
+    #needs: [code-quality-sast, secret-scanning, secure-iac-dockerfile-scan]
     uses: ./.github/workflows/build-docker-image.yml
     secrets: inherit
 
