--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -65,3 +65,11 @@ jobs:
     needs: [build-and-scan-docker]
     uses: ./.github/workflows/publish-docker-hub.yml
     secrets: inherit
+
+  # ═══════════════════════════════════════════════
+  # ÉTAPE 9 : DAST (Après publication Docker Hub)
+  # ═══════════════════════════════════════════════
+  dast-zap-test:
+    needs: publish-docker-hub
+    uses: ./.github/workflows/dast-zap-test.yml
+    secrets: inherit
